Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55758

When writing Japanese text in QTextEdit, placeholder text is not removed while composing the first word

    XMLWordPrintable

Details

    • macOS
    • 4b975405d70529408b2422e42720a80152746c20

    Description

      When composing the first (japanese) word in QTextEdit, the placeholder text is not removed and the word being composed is unreadable. Placeholder text is removed after composing word is finished.

      Steps to reproduce:

      • Run attached sample
      • Focus on the QTextEdit (with placeholder text "QTextEdit Placeholder Text broken")
      • Enable Japanese IME
      • Start writing
      • EXPECTED: Placeholder text disappears
      • ACTUAL: Placeholder text stays until composing the first word is finished.

      Attachments

        For Gerrit Dashboard: QTBUG-55758
        # Subject Branch Project Status CR V

        Activity

          People

            richard Richard Moe Gustavsen
            jussi_witick Jussi Witick
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes